fixed alignment

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body{
     background-color: hsl(47, 88%, 63%);
     font-family: 'figtree', sans-serif;
     font-size: 16px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
    
 }
 .card-container{
